# mcphub

./: .env  .gitignore  Dockerfile.manager  README.md  docker-compose.yml  entrypoint.sh  mcp_server.py  requirements.txt  spec.md  test_client.py
.claude/: settings.json
apps/calculator/: Dockerfile  app.py
apps/myapp/: Dockerfile  app.py
docs/: APP_DEVELOPMENT_GUIDE.md  ENTRA_ID_AUTH_GUIDE.md
offline-vsix/: README.md
rust_ui/: Cargo.toml
rust_ui/frontend/: package-lock.json  package.json
rust_ui/frontend/src/app/: layout.tsx  page.tsx
rust_ui/frontend/src/components/: ProjectGroupsDashboard.tsx
rust_ui/frontend/src/components/ui/: button.tsx
rust_ui/src/: main.rs
